--- a/src/app/molecules/card-row/card-row.component.scss
+++ b/src/app/molecules/card-row/card-row.component.scss
@@ -2,8 +2,17 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  gap: 10px;
   width: 100%;
+
+  & * {
+    margin-bottom: 10px;
+    margin-right: 10px;
+  }
+
+  & :last-child {
+    margin-bottom: 0;
+    margin-right: 0;
+  }
 
   & .card {
     height: 100%!important;
