--- a/src/app/molecules/customized-element/customized-element.component.scss
+++ b/src/app/molecules/customized-element/customized-element.component.scss
@@ -21,7 +21,14 @@
 
   &__buttons-container {
     display: flex;
-    gap: 16px;
+    
+    & * {
+      margin-right: 16px;
+    }
+  
+    & :last-child {
+      margin-right: 0;
+    }
   }
 }
 
